Kind of working

--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -1,4 +1,4 @@
-{% extends 'templates/base.html' %}
+{% extends 'base.html' %}
 {% load static %}
 {% block content %}
 <header class="masthead text-center text-white">
