--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -29,6 +29,8 @@
 
     <!-- Custom styles for this template -->
     <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link rel="shortcut icon" href="{% static 'img/favicon2.png' %}" type="image/x-icon">
+    <link rel="icon" href="{% static 'img/favicon2.png' %}"type="image/x-icon">
 </head>
 
 <body>
