--- a/src/templates/home.html
+++ b/src/templates/home.html
@@ -27,7 +27,14 @@
                 <div style="display: none">{{form}}
                     <input class="btn btn-primary btn-xl rounded-pill" type="submit" value="Upload file"></div>
                 <label for="{{ form.file.auto_id }}" class="btn btn-primary btn-xl rounded-pill label-clickable"
-                    value="Upload file">Upload File</label>
+                                                     value="Upload file">
+                        <span id="up-file-txt">
+                            Upload File
+                        </span>
+                        <div id="spinner" class="spinner-border" style="display: none;" role="status">
+                            <span class="sr-only">Loading...</span>
+                        </div>
+                </label>
             </form>
         </div>
     </div>
